--- a/infraestructura.html
+++ b/infraestructura.html
@@ -105,7 +105,7 @@
 				</div><!--/span4-->
 			</div><!--/row1-->
 			<div class="row span3 offset4">				
-					<h3 style="text-align: center">1 GPU NVIDIA Tesla K20M</h3>
+					<h3 style="text-align: center">1 GPU NVIDIA Tesla K20c</h3>
 					<br>					
 					<center><img src="img/k20.jpg"/></center>
 					<br>
@@ -125,7 +125,7 @@
 			<footer>
 				<div class="row">
 					<div class="span9">
-						<p class="text-left">© 2013 Universidad Nacional Autónoma de México, Facultad de Ingeniería</p>
+						<p class="text-left">© 2014 Universidad Nacional Autónoma de México, Facultad de Ingeniería</p>
 					</div>
 					<div class="span3">
 						<p class="text-right"><a href="#">Regresar</a></p>
@@ -134,7 +134,7 @@
       </footer>
       <!--<footer>
         <p class="pull-right"><a href="#">Regresar</a></p>
-        <p>© 2013 Universidad Nacional Autónoma de México, Facultad de Ingeniería</p>
+        <p>© 2014 Universidad Nacional Autónoma de México, Facultad de Ingeniería</p>
       </footer> -->
 
     </div><!--/.container-->
